--- a/Variational Autoencoders/VAE.ipynb
+++ b/Variational Autoencoders/VAE.ipynb
@@ -5,15 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "3eHIGurE7SVO",
-        "Qoe94xCIT4Nl",
-        "xzn0YrUaaWjx",
-        "JSbtnul3nT1-",
-        "8ei2LlGs5C2q",
-        "cuc9qvyWWHUf",
-        "s8rcWdkX9In4",
-        "7iZsvZOfgOgW",
-        "u_P94_AwVz8o"
+        "s8rcWdkX9In4"
       ],
       "gpuType": "T4"
     },
@@ -1724,91 +1716,12 @@
     {
       "cell_type": "code",
       "source": [
-        "'''\n",
-        "x = torch.randn(10, 20, 20)\n",
-        "input_shape_image = 20*20\n",
-        "number_of_hidden_neurons = 10\n",
-        "latent_space_dimension = 45\n",
-        "possible_pixel_values = 21\n",
-        "\n",
-        "e = nn.Sequential(\n",
-        "    nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Conv2d(64, 32, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Conv2d(32, 16, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Conv2d(16, 1, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Flatten(),\n",
-        "    nn.Linear(input_shape_image*1,latent_space_dimension)\n",
-        "    #nn.LeakyReLU(),\n",
-        ")\n",
-        "\n",
-        "e2 = nn.Sequential(\n",
-        "    nn.Linear(latent_space_dimension, 32*20),\n",
-        "    nn.Unflatten(2, (32,20)),\n",
-        "    nn.ConvTranspose2d(32, 32, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(64, 16, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(16, 1, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Flatten(),\n",
-        "    nn.Linear(32*20, input_shape_image*possible_pixel_values)\n",
-        ")\n",
-        "\n",
-        "f=25\n",
-        "\n",
-        "e2 = nn.Sequential(\n",
-        "     nn.Linear(latent_space_dimension, 25),\n",
-        "    nn.Unflatten(3, (5, 5)),\n",
-        "    nn.ConvTranspose2d(1, 16, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(16, 32, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.ConvTranspose2d(64, 1, kernel_size=3, stride=1, padding=1),\n",
-        "    nn.Flatten(),\n",
-        "    nn.Linear(25, input_shape_image*possible_pixel_values)\n",
-        ")\n",
-        "#print(x.unsqueeze(1).shape)\n",
-        "#print(e(x.unsqueeze(1)).shape)\n",
-        "\n",
-        "x = torch.randn(2, 32,1,45)\n",
-        "\n",
-        "e2(x).shape\n",
-        "\n",
-        "'''\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 174
-        },
-        "id": "EITtf1KCdtoK",
-        "outputId": "5b2adf4b-e5c8-4106-ebef-631f2baf67e6"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'\\nx = torch.randn(10, 20, 20)\\ninput_shape_image = 20*20\\nnumber_of_hidden_neurons = 10\\nlatent_space_dimension = 45\\npossible_pixel_values = 21\\n\\ne = nn.Sequential(\\n    nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1),\\n    nn.Conv2d(64, 32, kernel_size=3, stride=1, padding=1),\\n    nn.Conv2d(32, 16, kernel_size=3, stride=1, padding=1),\\n    nn.Conv2d(16, 1, kernel_size=3, stride=1, padding=1),\\n    nn.Flatten(),\\n    nn.Linear(input_shape_image*1,latent_space_dimension)\\n    #nn.LeakyReLU(),\\n)\\n\\ne2 = nn.Sequential(\\n    nn.Linear(latent_space_dimension, 32*20),\\n    nn.Unflatten(2, (32,20)),\\n    nn.ConvTranspose2d(32, 32, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(32, 64, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(64, 16, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(16, 1, kernel_size=3, stride=1, padding=1),\\n    nn.Flatten(),\\n    nn.Linear(32*20, input_shape_image*possible_pixel_values)\\n)\\n\\nf=25\\n\\ne2 = nn.Sequential(\\n     nn.Linear(latent_space_dimension, 25),\\n    nn.Unflatten(3, (5, 5)),\\n    nn.ConvTranspose2d(1, 16, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(16, 32, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(32, 64, kernel_size=3, stride=1, padding=1),\\n    nn.ConvTranspose2d(64, 1, kernel_size=3, stride=1, padding=1),\\n    nn.Flatten(),\\n    nn.Linear(25, input_shape_image*possible_pixel_values)\\n)\\n#print(x.unsqueeze(1).shape)\\n#print(e(x.unsqueeze(1)).shape)\\n\\nx = torch.randn(2, 32,1,45)\\n\\ne2(x).shape\\n\\n'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 16
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "class Encoder(nn.Module):\n",
-        "  def __init__(self, input_shape_image, latent_space_dimension, number_of_hidden_neurons, L,type_of_encoder = 2):\n",
+        "  def __init__(self, input_shape_image, latent_space_dimension, number_of_hidden_neurons, L):\n",
         "    super(Encoder,self).__init__()\n",
         "\n",
         "    #numero di campioni per l'approssimazione Monte-Carlo dell'Expected Value\n",
         "    self.L = L\n",
-        "\n",
-        "    self.type_of_encoder = type_of_encoder\n",
         "\n",
         "    self.input_shape_image = input_shape_image\n",
         "\n",
@@ -1820,15 +1733,6 @@
         "                                 nn.LeakyReLU(),\n",
         "                                 #moltiplico per 2 perchè voglio sia il vettore di media che std (diagonale)\n",
         "                                 nn.Linear(number_of_hidden_neurons,2*latent_space_dimension))\n",
-        "    \n",
-        "    self.encoder2 = nn.Sequential()\n",
-        "    '''nn.Sequential(nn.Conv2d(1, 64, kernel_size=3, stride=1, padding=1),\n",
-        "                                  nn.Conv2d(64, 32, kernel_size=3, stride=1, padding=1),\n",
-        "                                  nn.Conv2d(32, 16, kernel_size=3, stride=1, padding=1),\n",
-        "                                  nn.Conv2d(16, 1, kernel_size=3, stride=1, padding=1),\n",
-        "                                  nn.Flatten(),\n",
-        "                                  nn.Linear(input_shape_image*1,2*latent_space_dimension),\n",
-        "                                  nn.LeakyReLU())'''\n",
         "\n",
         "  def KL_loss(self,log_std_vector,mean_vector, batch_length):\n",
         "\n",
@@ -1910,16 +1814,11 @@
         "\n",
         "    #La rete ritorna il vettore di media, std (diagonale) e la z campionata\n",
         "  def forward(self, x):\n",
-        "    if (self.type_of_encoder == 1 or self.type_of_encoder == 2):\n",
-        "      #flatto il batch (64, 28, 28) in (64, 784)\n",
-        "      x = torch.flatten(x,1)#.to(device)\n",
-        "      #do alla rete x e prelevo vettore di media e std (diagonale)\n",
-        "      output = self.encoder(x)#.to(device)\n",
-        "    else:\n",
-        "      x = x.unsqueeze(1)\n",
-        "      #do alla rete x e prelevo vettore di media e std (diagonale)\n",
-        "      output = self.encoder2(x)#.to(device)\n",
         "\n",
+        "    #flatto il batch (64, 28, 28) in (64, 784)\n",
+        "    x = torch.flatten(x,1)#.to(device)\n",
+        "    #do alla rete x e prelevo vettore di media e std (diagonale)\n",
+        "    output = self.encoder(x)\n",
         "\n",
         "    #print(output.device)\n",
         "    #print(output.shape)\n",
@@ -1959,12 +1858,10 @@
       "cell_type": "code",
       "source": [
         "class Decoder(nn.Module):\n",
-        "  def __init__(self, input_shape_image,latent_space_dimension, number_of_hidden_neurons, possible_pixel_values, L, type_of_decoder = 2):\n",
+        "  def __init__(self, input_shape_image,latent_space_dimension, number_of_hidden_neurons, possible_pixel_values, L):\n",
         "    super(Decoder,self).__init__()\n",
         "\n",
         "    self.L = L\n",
-        "\n",
-        "    self.type_of_decoder = type_of_decoder\n",
         "\n",
         "    self.input_shape_image = input_shape_image\n",
         "\n",
@@ -1980,18 +1877,6 @@
         "                                 nn.LeakyReLU(),\n",
         "                                 nn.Linear(number_of_hidden_neurons*3, input_shape_image*possible_pixel_values),\n",
         "                                 )\n",
-        "    \n",
-        "    self.decoder2 = nn.Sequential()\n",
-        "    '''\n",
-        "                                nn.Linear(latent_space_dimension, input_shape_image * 16),\n",
-        "                                nn.Unflatten(2, (input_shape_image, 16)),\n",
-        "                                nn.ConvTranspose2d(input_shape_image, 16, kernel_size=3, stride=1, padding=1),\n",
-        "                                nn.ConvTranspose2d(16, 32, kernel_size=3, stride=1, padding=1),\n",
-        "                                nn.ConvTranspose2d(32, 64, kernel_size=3, stride=1, padding=1),\n",
-        "                                nn.ConvTranspose2d(64, 1, kernel_size=3, stride=1, padding=1),\n",
-        "                                nn.Flatten(),\n",
-        "                                nn.Linear(input_shape_image*16, input_shape_image*possible_pixel_values)\n",
-        "                            )'''\n",
         "\n",
         "  \n",
         "  def sample(self):\n",
@@ -2004,11 +1889,7 @@
         "    #inietto nel decoder:\n",
         "    z_sample = z_sample.unsqueeze(0)\n",
         "\n",
-        "    if self.type_of_decoder == 1:\n",
-        "          #(1,1,784*256)\n",
-        "      logits = self.decoder(z_sample)\n",
-        "    else:\n",
-        "      logits = self.decoder(z_sample)\n",
+        "    logits = self.decoder(z_sample)\n",
         "\n",
         "\n",
         "    #(1,784,256)\n",
@@ -2032,11 +1913,7 @@
         "    \n",
         "    #Le logits hanno forma (L,N, numero_pixel*possibili_valori)\n",
         "    #print(\"Z dimension: \", z.shape)\n",
-        "    if self.type_of_decoder == 1:\n",
-        "      logits = self.decoder(z).to(device)\n",
-        "    else:\n",
-        "      logits = self.decoder(z).to(device)\n",
-        "    #print(\"Logits\",logits.device)\n",
+        "    logits = self.decoder(z).to(device)\n",
         "\n",
         "    '''\n",
         "      Prima di convertire le logits in probabilità, ciascun vettore del tensore\n",
@@ -2117,11 +1994,11 @@
       "cell_type": "code",
       "source": [
         "class VAE(nn.Module):\n",
-        "  def __init__(self, possible_pixel_values, input_shape_image, latent_space_dimension, number_of_hidden_neurons,L, type_of ):\n",
+        "  def __init__(self, possible_pixel_values, input_shape_image, latent_space_dimension, number_of_hidden_neurons,L ):\n",
         "    super(VAE, self).__init__()\n",
         "\n",
-        "    self.encoder = Encoder(input_shape_image,latent_space_dimension,number_of_hidden_neurons,L,type_of)\n",
-        "    self.decoder = Decoder(input_shape_image,latent_space_dimension,number_of_hidden_neurons,possible_pixel_values,L,type_of)\n",
+        "    self.encoder = Encoder(input_shape_image,latent_space_dimension,number_of_hidden_neurons,L)\n",
+        "    self.decoder = Decoder(input_shape_image,latent_space_dimension,number_of_hidden_neurons,possible_pixel_values,L)\n",
         "\n",
         "  def sample(self):\n",
         "    return self.decoder.sample()\n",
@@ -2171,7 +2048,7 @@
     {
       "cell_type": "code",
       "source": [
-        "model = VAE( possible_pixel_values, input_shape_image, latent_space_dimension, number_of_hidden_neurons, L, type_of = 1).to(device)"
+        "model = VAE( possible_pixel_values, input_shape_image, latent_space_dimension, number_of_hidden_neurons, L).to(device)"
       ],
       "metadata": {
         "id": "sJc48paqV04o"
