--- a/Variational Autoencoders/3_VAE_Householder_Flows.ipynb
+++ b/Variational Autoencoders/3_VAE_Householder_Flows.ipynb
@@ -4,10 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "collapsed_sections": [
-        "kkUBSP_FkoJK"
-      ]
+      "gpuType": "T4"
     },
     "kernelspec": {
       "name": "python3",
@@ -1225,231 +1222,7 @@
         "    train_model_on_given_gpu()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uBa71JKDVSPN",
-        "outputId": "efe52bdc-98d2-4685-c860-44af82f256a7"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Device utilizzato: cuda\n",
-            "Numero di GPU disponibili: 1\n",
-            "Memoria GPU prima della creazione del modello: 0\n"
-          ]
-        },
-        {
-          "metadata": {
-            "tags": null
-          },
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.10/dist-packages/torch/nn/modules/lazy.py:180: UserWarning: Lazy modules are a new feature under heavy development so changes to the API or functionality can happen at any moment.\n",
-            "  warnings.warn('Lazy modules are a new feature under heavy development '\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": []
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "U3jcP4QahQli"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# test"
-      ],
-      "metadata": {
-        "id": "kkUBSP_FkoJK"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "N=2\n",
-        "input_shape_image = 50*50\n",
-        "possible_pixel_values = 2+1\n",
-        "x = torch.round(torch.rand((3,50,50))*(possible_pixel_values-1))\n",
-        "print(\"Input shape\",x.shape)\n",
-        "latent_space_dimension = 6\n",
-        "number_of_hidden_neurons = 6\n",
-        "L=2\n",
-        "mog_components = 3\n",
-        "\n",
-        "\n",
-        "model =  VAE( possible_pixel_values, input_shape_image, latent_space_dimension, number_of_hidden_neurons, L,number_of_flows=10,type_of_prior=1, mog_components=mog_components)\n",
-        "model.initialize()\n",
-        "\n",
-        "model.forward(x)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MADD16NUMW7n",
-        "outputId": "211b9cf0-04ef-4a45-ac8c-1389ed8fa442"
-      },
-      "execution_count": 89,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Input shape torch.Size([3, 50, 50])\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor(2880.0144, grad_fn=<MeanBackward0>)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 89
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "z=torch.tensor([ 1.6128, -0.7670,  0.7999,  0.1326, -0.3292])\n",
-        "m = torch.tensor([[ 0.9719, -0.0809,  0.0633, -0.0105,  0.2117],\n",
-        "         [-0.0809,  0.7677,  0.1819, -0.0303,  0.6084],\n",
-        "         [ 0.0633,  0.1819,  0.8575,  0.0237, -0.4764],\n",
-        "         [-0.0105, -0.0303,  0.0237,  0.9961,  0.0793],\n",
-        "         [ 0.2117,  0.6084, -0.4764,  0.0793, -0.5931]])\n",
-        "torch.matmul(m,z)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "-ErHYvnMdxua",
-        "outputId": "feaeed41-0e48-44fc-eaa0-a3de30141d0d"
-      },
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "tensor([ 1.6091, -0.7781,  0.8085,  0.1312, -0.3005])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "out_channels = 32\n",
-        "kernel_size = 4\n",
-        "latent_space_dimension = 64\n",
-        "\n",
-        "x = torch.rand((10,1,64,64))\n",
-        "\n",
-        "encoder = nn.Sequential(\n",
-        "                   nn.Conv2d(1,out_channels,kernel_size, stride=2),\n",
-        "                   nn.BatchNorm2d(out_channels),\n",
-        "                   nn.LeakyReLU(),\n",
-        "                   #nn.Dropout(0.25),\n",
-        "\n",
-        "                   nn.Conv2d(out_channels,2*out_channels,kernel_size, stride=2),\n",
-        "                   nn.BatchNorm2d(2*out_channels),\n",
-        "                   nn.LeakyReLU(),\n",
-        "                   #nn.Dropout(0.25),\n",
-        "\n",
-        "                   nn.Conv2d(2*out_channels,2*out_channels,kernel_size,stride=2),\n",
-        "                   nn.BatchNorm2d(2*out_channels),\n",
-        "                   nn.LeakyReLU(),\n",
-        "                   nn.Dropout(0.25),\n",
-        "\n",
-        "                   nn.Conv2d(2*out_channels,3*out_channels,kernel_size, stride=2),\n",
-        "                   nn.BatchNorm2d(3*out_channels),\n",
-        "                   nn.LeakyReLU(),\n",
-        "\n",
-        "                   nn.Flatten(),\n",
-        "                   nn.LazyLinear(2*latent_space_dimension)\n",
-        "\n",
-        "                   ).to(torch.float32)\n",
-        "\n",
-        "z = torch.rand((10, 1, 64))\n",
-        "\n",
-        "decoder = nn.Sequential(nn.Linear(latent_space_dimension,4096),\n",
-        "                          nn.Unflatten(2, (int(math.sqrt(4096)),int(math.sqrt(4096)))),\n",
-        "                          nn.Upsample(size=[8,8], mode='bilinear', align_corners=False),\n",
-        "                          nn.Conv2d(in_channels=1, out_channels=3*out_channels, kernel_size=kernel_size),\n",
-        "                          nn.BatchNorm2d(3*out_channels),\n",
-        "                          nn.LeakyReLU(),\n",
-        "\n",
-        "                          nn.Upsample(size=[16,16], mode='bilinear', align_corners=False),\n",
-        "                          nn.Conv2d(in_channels=3*out_channels, out_channels=2*out_channels, kernel_size=kernel_size),\n",
-        "                          nn.BatchNorm2d(2*out_channels),\n",
-        "                          nn.LeakyReLU(),\n",
-        "\n",
-        "                          nn.Upsample(size=[16,16], mode='bilinear', align_corners=False),\n",
-        "                          nn.Conv2d(in_channels=2*out_channels, out_channels=out_channels, kernel_size=kernel_size),\n",
-        "                          nn.BatchNorm2d(out_channels),\n",
-        "                          nn.LeakyReLU(),\n",
-        "\n",
-        "                          nn.Flatten(),\n",
-        "                          nn.LazyLinear(input_shape_image*possible_pixel_values),\n",
-        "                          nn.Unflatten(1,(input_shape_image,possible_pixel_values))\n",
-        "\n",
-        "                          )\n",
-        "\n",
-        "\n",
-        "\n",
-        "decoder(z).shape"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "zACbTBlvko_m",
-        "outputId": "00df0d0b-217c-4e5f-9ece-51689017328e"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "torch.Size([10, 32, 13, 13])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 22
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LtaOEA12k_he"
+        "id": "uBa71JKDVSPN"
       },
       "execution_count": null,
       "outputs": []
