--- a/Variational Autoencoders/6_Hierarchical_VAE_(Ladder).ipynb
+++ b/Variational Autoencoders/6_Hierarchical_VAE_(Ladder).ipynb
@@ -146,7 +146,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Blocco che serve a approssimare le distribuzioni q e p"
+        "Blocco che serve ad approssimare le distribuzioni q e p"
       ],
       "metadata": {
         "id": "FGhlkZF-zSVQ"
